--- a/mysql/configmap.yaml
+++ b/mysql/configmap.yaml
@@ -5,10 +5,11 @@ metadata:
   labels:
     app: mysql
 data:
-  master.cnf:
+  master.cnf: |
+    # Apply this config only on the master.
     [mysqld]
     log-bin
-  slave.cnf:
+  slave.cnf: |
+    # Apply this config only on slaves.
     [mysqld]
     super-read-only
-
