--- a/redis/visitor/src/main/resources/application.properties
+++ b/redis/visitor/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.redis.repositories.enabled=true
-spring.redis.host=${REDIS_HOST}
+spring.redis.host=${REDIS_HOST:localhost}
 spring.redis.port=${REDIS_PORT:6379}
