Update dynamic entries

--- a/events/src/main/resources/application.properties
+++ b/events/src/main/resources/application.properties
@@ -16,7 +16,7 @@
 
 pubsub.topic=EventsTopic
 pubsub.token=8r0teb6778939sfbe07nn0mm271
-pubsub.projectid=half-life-277322
+pubsub.projectid=${PROJECT_ID}
 server.port=${PORT:443}
 server.servlet.context-path=/
 spring.thymeleaf.cache=false
